# football_opendata_analysis

./: .gitignore  pyproject.toml
notebook/: check_data.ipynb  plot_example.ipynb  read_data.ipynb
src/: mymodule.py
